# Jarvis_Prime

./: .gitignore  CLAUDE.md  CODEX.md  CODEX_HANDOFF.md  DEVELOPMENT_PLAN.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/health/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/schemas/: health.py
backend/tests/: test_health.py
docs/adr/: 0000-template.md  0001-frontend-framework.md
docs/product/: app-blueprint.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/config/: timezones.json
frontend/src/: main.tsx
frontend/src/app/: App.css  App.tsx
frontend/src/core/: event-bus.ts  i18n.ts  module-contract.ts  module-registry.ts  worker-host.ts  worker-messages.ts
frontend/src/modules/command-center/: CommandCenterModule.ts
frontend/src/modules/diagnostics/: DiagnosticsModule.ts  DiagnosticsPanel.tsx
frontend/src/modules/engineering-tools/: EngineeringToolsModule.ts  EngineeringToolsPanel.tsx
frontend/src/modules/meeting-room/: MeetingRoomModule.ts  MeetingRoomPanel.tsx
frontend/src/modules/public-holidays/: PublicHolidayPanel.tsx  PublicHolidaysModule.ts
frontend/src/workers/: compute-worker.ts  ingest-worker.ts  render-worker.ts
infra/: docker-compose.yml
