[project]
name = "jarvis-prime-backend"
version = "0.1.0"
description = "FastAPI backend for Jarvis Prime"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.115,<1.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pydantic-settings>=2.8,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
ignore_missing_imports = true
